Done without cosmetic

--- a/WpfTestMusicParseApp/MainWindow.xaml
+++ b/WpfTestMusicParseApp/MainWindow.xaml
@@ -18,6 +18,30 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Button Width="100px" Click="Button_Click" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5">Load</Button>
+        <TextBox x:Name="LinkBox" Grid.Row="1" Grid.Column="1" Width="100px" Height="auto">
+            <TextBox.Style>
+                <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                    <Style.Resources>
+                        <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                            <VisualBrush.Visual>
+                                <Label Content="Link" Foreground="LightGray" />
+                            </VisualBrush.Visual>
+                        </VisualBrush>
+                    </Style.Resources>
+                    <Style.Triggers>
+                        <Trigger Property="Text" Value="{x:Static sys:String.Empty}">
+                            <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                        </Trigger>
+                        <Trigger Property="Text" Value="{x:Null}">
+                            <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                        </Trigger>
+                        <Trigger Property="IsKeyboardFocused" Value="True">
+                            <Setter Property="Background" Value="White" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </TextBox.Style>
+        </TextBox>
         <Grid Grid.RowSpan="4">
             <ListView Name="SoundsList" Background="White">
                 <ListView.View>
